# hackatonUAB

./: .gitignore  README.md  VAR.PY  prova.py  pyproject.toml  reading.py  setup.py  test_out.py  traductor.py  translator.py  var.py  variable_seeker.py
translator_uabthehack/: main.py  variable_seeker.py
translatorpackage/: __init__.py  main.py
